[package]
name = "orfail"
version = "0.1.1"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Error handling library for portable unrecoverable errors"
homepage = "https://github.com/sile/orfail"
repository = "https://github.com/sile/orfail"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
