[package]
name = "orfail"
version = "1.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Error handling library for portable unrecoverable errors"
homepage = "https://github.com/sile/orfail"
repository = "https://github.com/sile/orfail"
readme = "README.md"
categories = ["no-std"]
